Added Reset option.
